[project]
name = "unicorn-playground"
version = "0.1.0"
description = "EEG playground with ezmsg-tasks for g.tec Unicorn"
readme = "README.md"
requires-python = ">=3.10.15, <3.13"
dependencies = [
    "ezmsg-panel",
    "ezmsg-sigproc<=1.8.2",
    "ezmsg-tasks",
    "ezmsg-unicorn",
    "ezmsg",
    "vqf>=2.0.1",
    "jupyterlab>=4.4.7",
]

[tool.uv.sources]
ezmsg-unicorn = { git = "https://github.com/griffinmilsap/ezmsg-unicorn.git" }
ezmsg-panel = { git = "https://github.com/griffinmilsap/ezmsg-panel.git" }
ezmsg-tasks = { git = "https://github.com/griffinmilsap/ezmsg-tasks.git" }
